// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render CourseSection with courses 1`] = `
<article
  className="CourseSection"
  id="SectionName"
>
  <header
    className="CourseSection__header"
  >
    <h2>
      Section Name
    </h2>
  </header>
  <section
    className="CourseSection__courses"
  >
    <Course
      0="C"
      1="o"
      2="u"
      3="r"
      4="s"
      5="e"
      6=" "
      7="1"
    />
    <Course
      0="C"
      1="o"
      2="u"
      3="r"
      4="s"
      5="e"
      6=" "
      7="2"
    />
  </section>
</article>
`;

exports[`Render CourseSection without courses 1`] = `
<article
  className="CourseSection"
  id="SectionName"
>
  <header
    className="CourseSection__header"
  >
    <h2>
      Section Name
    </h2>
  </header>
  <section
    className="CourseSection__courses"
  />
</article>
`;
